# stratalis_interview

./: README.md  pyproject.toml
stratalis/: crawl.py  extract.py  main.py  test_extract.py
stratalis/test_data/: extract.html
