[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratalis"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
  {name = "John Nduli", email = "rookie101@jnduli.co.ke"},
]
maintainers = [
  {name = "John Nduli", email = "rookie101@jnduli.co.ke"}
]
description = "Stratalis Take Home Interview"
readme = "README.md"
dependencies = [
  "aiohttp==3.9.3",
  "beautifulsoup4==4.12.3",
]

[project.optional-dependencies]
dev = [
  "coverage==7.4.4",
  "pytest==8.1.1",
  "mypy==1.9.0",
  "pytest-asyncio==0.23.7",
]

[project.scripts]
demo = "stratalis:main.main"
